--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -40,7 +40,7 @@ about:
   home: https://github.com/un33k/python-slugify
   license: MIT
   license_family: MIT
-  license_file: LICENSE
+  # license_file: LICENSE There is no license in python-slugify
   summary: 'A Python Slugify application that handles Unicode'
   dev_url: https://github.com/un33k/python-slugify
 
