--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,8 +27,8 @@ requirements:
 
   run:
     - python
-    - text-unidecode 1.2
-    - unidecode >=0.04.16
+    - text-unidecode >=1.3
+    - unidecode >=1.1.1
 
 test:
   imports:
