--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -14,7 +14,7 @@ source:
 
 build:
   noarch: python
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . --no-deps -vv
   entry_points:
     - slugify = slugify.cli:main
@@ -27,10 +27,13 @@ requirements:
 
   run:
     - python
-    - text-unidecode 1.2
-    - unidecode >=0.04.16
+    - text-unidecode >=1.3
+    - unidecode >=1.1.1
 
 test:
+  requires:
+    - pip
+
   imports:
     - slugify
 
@@ -38,6 +41,7 @@ test:
     - test.py
 
   commands:
+    - python -m pip check
     - slugify --help
     - python test.py
 
@@ -54,3 +58,4 @@ extra:
   recipe-maintainers:
     - proinsias
     - sodre
+    - bollwyvl
