--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -2,29 +2,24 @@
 {% set version = "4.0.1" %}
 
 package:
-  name: {{ name|lower }}
+  name: {{ name }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: 69a517766e00c1268e5bbfc0d010a0a8508de0b18d30ad5a1ff357f8ae724270
-  patches:
-    - fix_command.patch
 
 build:
   noarch: python
   number: 0
   script: {{ PYTHON }} -m pip install . --no-deps -vv
   entry_points:
-    - slugify = slugify.cli:main
+    - slugify=slugify.__main__:main
 
 requirements:
   host:
     - pip
     - python
-    - setuptools
-
   run:
     - python
     - text-unidecode >=1.3
@@ -33,18 +28,14 @@ requirements:
 test:
   requires:
     - pip
-
   imports:
     - slugify
-
   source_files:
     - test.py
-
   commands:
     - python -m pip check
     - slugify --help
     - python test.py
-
 
 about:
   home: https://github.com/un33k/python-slugify
