--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
 
 build:
   noarch: python
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . --no-deps -vv
   entry_points:
     - slugify=slugify.__main__:main
@@ -25,6 +25,11 @@ requirements:
     - python >=3.7
     - text-unidecode >=1.3
     - unidecode >=1.1.1
+  run_constrained:
+    # ships slugify in site-packages and bin
+    - slugify <0
+    # ships slugify in site-packages
+    - awesome-slugify <0
 
 test:
   requires:
