--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,9 @@
 {% set version = "8.0.1" %}
 
+{% set pytest_args = "pytest test.py -vv --cov=slugify --cov-branch --cov-report=term-missing:skip-covered --no-cov-on-fail --cov-fail-under=93" %}
+
 package:
-  name: python-slugify
+  name: python-slugify-split
   version: {{ version }}
 
 source:
@@ -13,34 +15,69 @@ source:
 build:
   noarch: python
   number: 2
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
-  entry_points:
-    - slugify=slugify.__main__:main
 
 requirements:
   host:
-    - pip
     - python >=3.7
   run:
     - python >=3.7
-    - text-unidecode >=1.3
-  run_constrained:
-    # ships slugify in site-packages and bin
-    - slugify <0
-    # ships slugify in site-packages
-    - awesome-slugify <0
 
-test:
-  requires:
-    - pip
-  imports:
-    - slugify
-  source_files:
-    - test.py
-  commands:
-    - python -m pip check
-    - slugify --help
-    - python test.py
+outputs:
+  - name: python-slugify
+    build:
+      noarch: python
+      script: {{ PYTHON }} -m pip install . --no-deps -vv --no-build-isolation
+      entry_points:
+        - slugify=slugify.__main__:main
+    requirements:
+      host:
+        - pip
+        - python >=3.7
+      run:
+        - python >=3.7
+        - text-unidecode >=1.3
+      run_constrained:
+        # ships slugify in site-packages and bin
+        - slugify <0
+        # ships slugify in site-packages
+        - awesome-slugify <0
+        # optional, GPLed dep with pin, see `python-slugify-with-unidecode`
+        - unidecode >=1.1.1
+      test:
+        requires:
+          - pip
+          - pytest-cov
+        imports:
+          - slugify
+        source_files:
+          - test.py
+        commands:
+          - pip check
+          - slugify --help
+          - {{ pytest_args }}
+
+  - name: python-slugify-with-unidecode
+    build:
+      noarch: python
+    requirements:
+      host:
+        - python >=3.7
+      run:
+        - {{ pin_subpackage("python-slugify", max_pin="x.x.x") }}
+        - python >=3.7
+        - unidecode
+    test:
+      requires:
+        - pip
+        - pytest-cov
+      imports:
+        - slugify
+      source_files:
+        - test.py
+      commands:
+        - pip check
+        - slugify --help
+        - {{ pytest_args }}
 
 about:
   home: https://github.com/un33k/python-slugify
@@ -51,6 +88,7 @@ about:
   dev_url: https://github.com/un33k/python-slugify
 
 extra:
+  feedstock-name: python-slugify
   recipe-maintainers:
     - proinsias
     - sodre
