--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,8 +1,11 @@
 {% set version = "8.0.4" %}
+
+{% set PYTHON = PYTHON | default("$PYTHON") %}
+
 {% set pytest_args = "pytest test.py -vv --cov=slugify --cov-branch --cov-report=term-missing:skip-covered --no-cov-on-fail --cov-fail-under=92" %}
 
 package:
-  name: python-slugify-split
+  name: python-slugify
   version: {{ version }}
 
 source:
@@ -12,71 +15,56 @@ source:
     sha256: 96a2fb00cb9a225c473cd0bcfab01286f16d47b51368a986a250e00a50ddcc92
 
 build:
-  noarch: python
   number: 1
+  noarch: python
+  script: 
+    - {{ PYTHON }} -m pip install . --no-deps -vv --no-build-isolation --disable-pip-version-check
+  entry_points:
+    - slugify = slugify.__main__:main
 
 requirements:
   host:
+    - pip
     - python {{ python_min }}
   run:
     - python >={{ python_min }}
+    - text-unidecode >=1.3
+  run_constrained:
+    # ships slugify in site-packages and bin
+    - slugify <0
+    # ships slugify in site-packages
+    - awesome-slugify <0
+    # optional, GPLed dep with pin, see `python-slugify-with-unidecode`
+    - unidecode >=1.1.1
 
 test:
   requires:
+    - pip
+    - pytest-cov
     - python {{ python_min }}
+  imports:
+    - slugify
+  source_files:
+    - test.py
   commands:
-    - exit 0
+    - pip check
+    - slugify --help
+    - {{ pytest_args }}
 
 outputs:
   - name: python-slugify
-    build:
-      noarch: python
-      script: {{ PYTHON }} -m pip install . --no-deps -vv --no-build-isolation
-      entry_points:
-        - slugify=slugify.__main__:main
-    requirements:
-      host:
-        - pip
-        - python {{ python_min }}
-      run:
-        - python >={{ python_min }}
-        - text-unidecode >=1.3
-      run_constrained:
-        # ships slugify in site-packages and bin
-        - slugify <0
-        # ships slugify in site-packages
-        - awesome-slugify <0
-        # optional, GPLed dep with pin, see `python-slugify-with-unidecode`
-        - unidecode >=1.1.1
-      test:
-        requires:
-          - pip
-          - pytest-cov
-          - python {{ python_min }}
-        imports:
-          - slugify
-        source_files:
-          - test.py
-        commands:
-          - pip check
-          - slugify --help
-          - {{ pytest_args }}
 
   - name: python-slugify-with-unidecode
     build:
-      noarch: python
+      noarch: generic
     requirements:
-      host:
-        - python {{ python_min }}
       run:
         - {{ pin_subpackage("python-slugify", max_pin="x.x.x") }}
-        - python >={{ python_min }}
         - unidecode
     test:
       requires:
         - pip
         - pytest-cov
-        - python {{ python_min }}
       imports:
         - slugify
       source_files:
